--- a/Views/PartyInvites/RsvpForm.cshtml
+++ b/Views/PartyInvites/RsvpForm.cshtml
@@ -4,13 +4,36 @@
 }
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>RSVP Form</title>
-    </head>
-    <body>
+
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>RSVP Form</title>
+</head>
+
+<body>
+    <form asp-action="RsvpForm" method="post">
         <div>
-            This is RsvpForm.cshtml view.
+            <label asp-for="Name">Your name:</label>
+            <input asp-for="Name" />
         </div>
-    </body>
+        <div>
+            <label asp-for="Email">Your email:</label>
+            <input asp-for="Email" />
+        </div>
+        <div>
+            <label asp-for="Phone">Your phone:</label>
+            <input asp-for="Phone" />
+        </div>
+        <div>
+            <label asp-for="WillAttend">Will you attend?</label>
+            <select asp-for="WillAttend">
+                <option value="">Choose an option</option>
+                <option value="true">Yes, I will be there</option>
+                <option value="false">No, I can't come</option>
+            </select>
+        </div>
+        <button type="submit">Submit RSVP</button>
+    </form>
+</body>
+
 </html>
