--- a/Views/PartyInvites/Index.cshtml
+++ b/Views/PartyInvites/Index.cshtml
@@ -3,17 +3,16 @@
 }
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Party</title>
-    </head>
-    <body>
-        <div>
-            <div>
-                We're going to have an exciting party.<br />
-                (To do: Sell it better. Add pirctures or something.) Ok
-            </div>
-            <a asp-action="RsvpForm">RSVP Now</a>
-        </div>
-    </body>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Party</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
+</head>
+<body>
+    <div class="text-center m-2">
+        <h3>We're going to have an exciting party.</h3>
+        <h4>(To do: Sell it better. Add pirctures or something.)</h4>
+        <a class="btn btn-primary" asp-action="RsvpForm">RSVP Now</a>
+    </div>
+</body>
 </html>
