--- a/Views/PartyInvites/Thanks.cshtml
+++ b/Views/PartyInvites/Thanks.cshtml
@@ -5,21 +5,23 @@
 
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Thanks</title>
-    </head>
-    <body>
-        <div>
-            <h1>Thank you, @Model?.Name!</h1>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Thanks</title>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
+</head>
+<body>
+    <div class="text-center">
+        <h1>Thank you, @Model?.Name!</h1>
         @if (Model?.WillAttend == true)
         {
             @:It's great that you're coming. The drinks are already in the fridge!
-        } else
+        }
+        else
         {
             @:Sorry to hear that you can't make it, but thanks for letting us know.
         }
         Click <a asp-action="ListResponses">here</a> to see who is coming
     </div>
-    </body>
+</body>
 </html>
